--- a/client/src/main/resources/com/helper/eissoso20kabakcihosseini/login.fxml
+++ b/client/src/main/resources/com/helper/eissoso20kabakcihosseini/login.fxml
@@ -1,10 +1,75 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXPasswordField?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" style="-fx-background-color: #121212;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Pane layoutX="400.0" layoutY="47.0" prefHeight="407.0" prefWidth="362.0" />
+      <Pane layoutX="414.0" layoutY="47.0" prefHeight="407.0" prefWidth="362.0" style="-fx-background-color: #424242;" AnchorPane.bottomAnchor="46.0" AnchorPane.leftAnchor="414.0" AnchorPane.rightAnchor="24.0" AnchorPane.topAnchor="47.0">
+         <children>
+            <JFXTextField fx:id="emailField" focusColor="#0093d9" labelFloat="true" layoutX="37.0" layoutY="54.0" prefHeight="33.0" prefWidth="288.0" promptText="Email-Adresse" unFocusColor="WHITE">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </JFXTextField>
+            <JFXPasswordField fx:id="passwordField" focusColor="#0093d9" labelFloat="true" layoutX="37.0" layoutY="149.0" prefHeight="39.0" prefWidth="288.0" promptText="Password" unFocusColor="WHITE">
+               <font>
+                  <Font name="Calibri" size="18.0" />
+               </font>
+            </JFXPasswordField>
+            <HBox layoutX="36.0" layoutY="314.0" prefHeight="48.0" prefWidth="288.0" spacing="10.0">
+               <children>
+                  <JFXButton fx:id="loginButton" buttonType="RAISED" prefHeight="48.0" prefWidth="139.0" ripplerFill="#0093d9" style="-fx-background-color: white;" text="Login" textFill="#0093d9">
+                     <font>
+                        <Font size="22.0" />
+                     </font>
+                  </JFXButton>
+                  <JFXButton fx:id="signUpButton" buttonType="RAISED" prefHeight="52.0" prefWidth="139.0" ripplerFill="WHITE" style="-fx-background-color: #0093d9;" text="Sign Up" textFill="WHITE">
+                     <font>
+                        <Font size="22.0" />
+                     </font>
+                  </JFXButton>
+               </children>
+            </HBox>
+            <Label fx:id="errorLabel" layoutX="36.0" layoutY="210.0" prefHeight="80.0" prefWidth="288.0" text="Error" textFill="RED" wrapText="true">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Label>
+         </children></Pane>
+      <Pane blendMode="SOFT_LIGHT" layoutX="29.0" layoutY="47.0">
+         <children>
+            <ImageView fitHeight="407.0" fitWidth="363.0" pickOnBounds="true">
+               <image>
+                  <Image url="@assets/helping-hands.jpg" />
+               </image>
+            </ImageView>
+         </children>
+      </Pane>
+      <VBox alignment="CENTER" layoutX="28.0" layoutY="45.0" prefHeight="195.0" prefWidth="362.0">
+         <children>
+            <Label text="Helper" textFill="#0093d9">
+               <font>
+                  <Font size="54.0" />
+               </font>
+            </Label>
+            <Separator orientation="VERTICAL" prefHeight="80.0" prefWidth="3.0" />
+            <Label text="Helfen, ob Jung oder Alt" textFill="WHITE">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
