--- a/client/src/main/resources/com/helper/eissoso20kabakcihosseini/login.fxml
+++ b/client/src/main/resources/com/helper/eissoso20kabakcihosseini/login.fxml
@@ -52,7 +52,7 @@
                         <Font size="22.0" />
                      </font>
                   </JFXButton>
-                  <JFXButton fx:id="signUpButton" buttonType="RAISED" prefHeight="52.0" prefWidth="139.0" ripplerFill="WHITE" style="-fx-background-color: #0093d9;" text="Sign Up" textFill="WHITE">
+                  <JFXButton fx:id="signUpButton" buttonType="RAISED" onAction="#handleUserRegistration" prefHeight="52.0" prefWidth="139.0" ripplerFill="WHITE" style="-fx-background-color: #0093d9;" text="Sign Up" textFill="WHITE">
                      <font>
                         <Font size="22.0" />
                      </font>
