--- a/client/src/main/resources/com/helper/eissoso20kabakcihosseini/register.fxml
+++ b/client/src/main/resources/com/helper/eissoso20kabakcihosseini/register.fxml
@@ -1,16 +1,136 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.VBox?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXPasswordField?>
+<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Button?>
-<?import javafx.geometry.Insets?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.helper.eissoso20kabakcihosseini.controllers.RegisterController">
-    <children>
-        <Label text="Secondary View" />
-        <Button fx:id="secondaryButton" text="Switch to Primary View" onAction="#switchToPrimary" />
-    </children>
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-    </padding>
-</VBox>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" style="-fx-background-color: #121212;" stylesheets="@css/login.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.helper.eissoso20kabakcihosseini.controllers.RegisterController">
+   <children>
+      <Label layoutX="261.0" layoutY="20.0" text="Erstelle dein Account" textFill="WHITE">
+         <font>
+            <Font size="30.0" />
+         </font>
+      </Label>
+      <VBox alignment="CENTER" layoutX="37.0" layoutY="129.0" prefHeight="330.0" spacing="10.0">
+         <children>
+            <VBox>
+               <children>
+                  <JFXTextField fx:id="emailField" focusColor="#0093d9" labelFloat="true" prefHeight="33.0" prefWidth="288.0" promptText="Email-Adresse" style="-jfx-unfocus-color: white;" stylesheets="@css/login.css" unFocusColor="WHITE">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </JFXTextField>
+                  <Label fx:id="errorLabelEmail" prefHeight="54.0" prefWidth="288.0" text="Die Email ist keine richtige Email, bitte ändern" textFill="RED" visible="false" wrapText="true">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Label>
+               </children>
+            </VBox>
+            <VBox>
+               <children>
+                  <JFXPasswordField fx:id="passwordField" focusColor="#0093d9" labelFloat="true" prefHeight="39.0" prefWidth="288.0" promptText="Password" unFocusColor="WHITE">
+                     <font>
+                        <Font name="Calibri" size="18.0" />
+                     </font>
+                  </JFXPasswordField>
+                  <Label fx:id="errorLabelPassword" prefHeight="46.0" prefWidth="288.0" text="Ihr Password ist leer" textFill="RED" visible="false" wrapText="true">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Label>
+               </children>
+            </VBox>
+            <VBox>
+               <children>
+                  <JFXPasswordField fx:id="confirmPasswordField" focusColor="#0093d9" labelFloat="true" prefHeight="39.0" prefWidth="288.0" promptText="Confirm Password" unFocusColor="WHITE">
+                     <font>
+                        <Font name="Calibri" size="18.0" />
+                     </font>
+                  </JFXPasswordField>
+                  <Label fx:id="errorLabelConfirmPassword" prefHeight="46.0" prefWidth="288.0" text="Ihre Passwörter stimmen nicht überein" textFill="RED" visible="false" wrapText="true">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Label>
+               </children>
+            </VBox>
+         </children>
+      </VBox>
+      <VBox layoutX="467.0" layoutY="151.0" prefHeight="315.0" prefWidth="288.0" spacing="10.0">
+         <children>
+            <VBox prefWidth="288.0">
+               <children>
+                  <HBox prefHeight="39.0" prefWidth="288.0" spacing="10.0">
+                     <children>
+                        <JFXTextField fx:id="streetField" focusColor="#0093d9" labelFloat="true" prefHeight="39.0" prefWidth="214.0" promptText="Straße" style="-jfx-unfocus-color: white;" stylesheets="@css/login.css" unFocusColor="WHITE">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </JFXTextField>
+                        <JFXTextField fx:id="streetNumberField" focusColor="#0093d9" labelFloat="true" prefHeight="39.0" prefWidth="63.0" promptText="Nr." style="-jfx-unfocus-color: white;" stylesheets="@css/login.css" unFocusColor="WHITE">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </JFXTextField>
+                     </children>
+                  </HBox>
+                  <Label fx:id="errorLabelStreet" prefHeight="54.0" prefWidth="288.0" text="keine Straße oder Hausnummer angegeben" textFill="RED" visible="false" wrapText="true">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Label>
+               </children>
+            </VBox>
+            <VBox>
+               <children>
+                  <JFXTextField fx:id="cityField" focusColor="#0093d9" labelFloat="true" prefHeight="39.0" prefWidth="288.0" promptText="Stadt" style="-jfx-unfocus-color: white;" stylesheets="@css/login.css" unFocusColor="WHITE">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </JFXTextField>
+                  <Label fx:id="errorLabelCity" prefHeight="54.0" prefWidth="288.0" text="keine Stadt angegeben" textFill="RED" visible="false" wrapText="true">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Label>
+               </children>
+            </VBox>
+            <VBox>
+               <children>
+                  <JFXTextField fx:id="zipcodeField" focusColor="#0093d9" labelFloat="true" prefHeight="39.0" prefWidth="288.0" promptText="Postleitzahl" style="-jfx-unfocus-color: white;" stylesheets="@css/login.css" unFocusColor="WHITE">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </JFXTextField>
+                  <Label fx:id="errorLabelZipcode" prefHeight="54.0" prefWidth="288.0" text="Postleitzahl fehlt" textFill="RED" visible="false" wrapText="true">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Label>
+               </children>
+            </VBox>
+         </children>
+      </VBox>
+      <Label layoutX="37.0" layoutY="94.0" text="Benutzerangaben" textFill="WHITE">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <Label layoutX="467.0" layoutY="94.0" text="Adresse" textFill="WHITE">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <JFXButton fx:id="createUserButton" buttonType="RAISED" layoutX="357.0" layoutY="439.0" onAction="#createUser" ripplerFill="#0093d9" style="-fx-background-color: #0093d9;" text="CREATE" textFill="WHITE">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </JFXButton>
+   </children>
+</AnchorPane>
