--- a/client/src/main/resources/com/helper/eissoso20kabakcihosseini/login.fxml
+++ b/client/src/main/resources/com/helper/eissoso20kabakcihosseini/login.fxml
@@ -4,7 +4,6 @@
 <?import com.jfoenix.controls.JFXPasswordField?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Separator?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -13,39 +12,39 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" style="-fx-background-color: #121212;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.helper.eissoso20kabakcihosseini.controllers.LoginController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="876.0" style="-fx-background-color: #121212;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.helper.eissoso20kabakcihosseini.controllers.LoginController">
    <children>
-      <Pane layoutX="414.0" layoutY="47.0" prefHeight="407.0" prefWidth="362.0" style="-fx-background-color: #424242;" AnchorPane.bottomAnchor="46.0" AnchorPane.leftAnchor="414.0" AnchorPane.rightAnchor="24.0" AnchorPane.topAnchor="47.0">
+      <Pane layoutX="414.0" layoutY="97.0" prefHeight="407.0" prefWidth="438.0" style="-fx-background-color: #424242;" AnchorPane.bottomAnchor="96.0" AnchorPane.leftAnchor="414.0" AnchorPane.rightAnchor="24.0" AnchorPane.topAnchor="97.0">
          <children>
-            <JFXTextField fx:id="emailField" focusColor="#0093d9" labelFloat="true" layoutX="37.0" layoutY="41.0" prefHeight="33.0" prefWidth="288.0" promptText="Email-Adresse" style="-jfx-unfocus-color: white;" stylesheets="@css/login.css" unFocusColor="WHITE">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </JFXTextField>
-            <VBox fx:id="emailErrorContainer" layoutX="37.0" layoutY="87.0" visible="false">
+            <VBox fx:id="emailErrorContainer" alignment="CENTER" layoutX="39.0" layoutY="48.0" prefHeight="119.0" prefWidth="363.0">
                <children>
-                  <Label fx:id="errorLabelEmail" prefHeight="54.0" prefWidth="288.0" text="Die Email ist keine richtige Email, bitte ändern" textFill="RED" wrapText="true">
+                  <JFXTextField fx:id="emailField" focusColor="#0093d9" labelFloat="true" prefHeight="33.0" prefWidth="288.0" promptText="Email-Adresse" style="-jfx-unfocus-color: white;" stylesheets="@css/login.css" unFocusColor="WHITE">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </JFXTextField>
+                  <Label fx:id="errorLabelEmail" prefHeight="54.0" prefWidth="288.0" text="Die Email ist keine richtige Email, bitte ändern" textFill="RED" visible="false" wrapText="true">
                      <font>
                         <Font size="16.0" />
                      </font>
                   </Label>
                </children>
             </VBox>
-            <JFXPasswordField fx:id="passwordField" focusColor="#0093d9" labelFloat="true" layoutX="37.0" layoutY="177.0" prefHeight="39.0" prefWidth="288.0" promptText="Password" unFocusColor="WHITE">
-               <font>
-                  <Font name="Calibri" size="18.0" />
-               </font>
-            </JFXPasswordField>
-            <VBox fx:id="passwordErrorContainer" layoutX="37.0" layoutY="224.0" visible="false">
+            <VBox fx:id="passwordErrorContainer" alignment="CENTER" layoutX="38.0" layoutY="185.0" prefHeight="119.0" prefWidth="363.0">
                <children>
-                  <Label fx:id="errorLabelPassword" prefHeight="46.0" prefWidth="288.0" text="Ihr Password ist leer" textFill="RED" wrapText="true">
+                  <JFXPasswordField fx:id="passwordField" focusColor="#0093d9" labelFloat="true" prefHeight="39.0" prefWidth="288.0" promptText="Password" unFocusColor="WHITE">
+                     <font>
+                        <Font name="Calibri" size="18.0" />
+                     </font>
+                  </JFXPasswordField>
+                  <Label fx:id="errorLabelPassword" prefHeight="46.0" prefWidth="367.0" text="Ihr Password ist leer" textFill="RED" visible="false" wrapText="true">
                      <font>
                         <Font size="16.0" />
                      </font>
                   </Label>
                </children>
             </VBox>
-            <HBox layoutX="37.0" layoutY="324.0" prefHeight="48.0" prefWidth="288.0" spacing="10.0">
+            <HBox layoutX="76.0" layoutY="338.0" prefHeight="48.0" prefWidth="288.0" spacing="10.0">
                <children>
                   <JFXButton fx:id="loginButton" buttonType="RAISED" onAction="#handleLogin" prefHeight="48.0" prefWidth="139.0" ripplerFill="#0093d9" style="-fx-background-color: white;" text="Login" textFill="#0093d9">
                      <font>
@@ -60,7 +59,7 @@
                </children>
             </HBox>
          </children></Pane>
-      <Pane blendMode="SOFT_LIGHT" layoutX="29.0" layoutY="47.0">
+      <Pane blendMode="SOFT_LIGHT" layoutX="28.0" layoutY="97.0" prefHeight="407.0">
          <children>
             <ImageView fitHeight="407.0" fitWidth="363.0" pickOnBounds="true">
                <image>
@@ -69,14 +68,13 @@
             </ImageView>
          </children>
       </Pane>
-      <VBox alignment="CENTER" layoutX="28.0" layoutY="45.0" prefHeight="195.0" prefWidth="362.0">
+      <VBox alignment="CENTER" layoutX="29.0" layoutY="-51.0" prefHeight="250.0" prefWidth="362.0">
          <children>
             <Label text="Helper" textFill="#0093d9">
                <font>
                   <Font size="54.0" />
                </font>
             </Label>
-            <Separator orientation="VERTICAL" prefHeight="80.0" prefWidth="3.0" />
             <Label text="Helfen, ob Jung oder Alt" textFill="WHITE">
                <font>
                   <Font size="24.0" />
