--- a/client/src/main/resources/com/helper/eissoso20kabakcihosseini/register.fxml
+++ b/client/src/main/resources/com/helper/eissoso20kabakcihosseini/register.fxml
@@ -2,21 +2,25 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXPasswordField?>
+<?import com.jfoenix.controls.JFXProgressBar?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.GaussianBlur?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" style="-fx-background-color: #121212;" stylesheets="@css/login.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.helper.eissoso20kabakcihosseini.controllers.RegisterController">
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="876.0" style="-fx-background-color: #121212;" stylesheets="@css/login.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.helper.eissoso20kabakcihosseini.controllers.RegisterController">
    <children>
-      <Label layoutX="261.0" layoutY="20.0" text="Erstelle dein Account" textFill="WHITE">
+      <Label layoutX="299.0" layoutY="21.0" text="Erstelle dein Account" textFill="WHITE">
          <font>
             <Font size="30.0" />
          </font>
       </Label>
-      <VBox alignment="CENTER" layoutX="37.0" layoutY="129.0" prefHeight="330.0" spacing="10.0">
+      <VBox alignment="CENTER" layoutX="41.0" layoutY="129.0" prefHeight="330.0" spacing="10.0">
          <children>
             <VBox>
                <children>
@@ -62,7 +66,7 @@
             </VBox>
          </children>
       </VBox>
-      <VBox layoutX="467.0" layoutY="151.0" prefHeight="315.0" prefWidth="288.0" spacing="10.0">
+      <VBox layoutX="512.0" layoutY="144.0" prefHeight="315.0" prefWidth="288.0" spacing="10.0">
          <children>
             <VBox prefWidth="288.0">
                <children>
@@ -117,17 +121,49 @@
             </VBox>
          </children>
       </VBox>
-      <Label layoutX="37.0" layoutY="94.0" text="Benutzerangaben" textFill="WHITE">
+      <Label layoutX="41.0" layoutY="94.0" text="Benutzerangaben" textFill="WHITE">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Label layoutX="467.0" layoutY="94.0" text="Adresse" textFill="WHITE">
+      <Label layoutX="512.0" layoutY="87.0" text="Adresse" textFill="WHITE">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <JFXButton fx:id="createUserButton" buttonType="RAISED" layoutX="357.0" layoutY="439.0" onAction="#createUser" ripplerFill="#0093d9" style="-fx-background-color: #0093d9;" text="CREATE" textFill="WHITE">
+      <JFXButton fx:id="createUserButton" buttonType="RAISED" layoutX="395.0" layoutY="408.0" onAction="#createUser" ripplerFill="#0093d9" style="-fx-background-color: #0093d9;" text="CREATE" textFill="WHITE">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </JFXButton>
+      <StackPane fx:id="infoContainer" opacity="0.9" prefHeight="500.0" prefWidth="800.0" style="-fx-background-color: black;" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <effect>
+            <GaussianBlur radius="0.0" />
+         </effect>
+         <children>
+            <VBox alignment="TOP_CENTER" maxHeight="450.0" maxWidth="600.0" spacing="100.0">
+               <children>
+                  <Label text="Loading..." textFill="WHITE">
+                     <font>
+                        <Font size="28.0" />
+                     </font>
+                  </Label>
+                  <JFXProgressBar fx:id="progressBar" />
+                  <Label fx:id="messageLabel" alignment="CENTER" prefHeight="191.0" prefWidth="363.0" text="Message from Server" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Label>
+               </children>
+            </VBox>
+         </children>
+      </StackPane>
+      <JFXTextField fx:id="activationLinkField" focusColor="#0093d9" labelFloat="true" layoutX="187.0" layoutY="473.0" prefHeight="39.0" prefWidth="503.0" promptText="Aktivierungslink" style="-jfx-unfocus-color: white;" stylesheets="@css/login.css" unFocusColor="WHITE">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </JFXTextField>
+      <JFXButton fx:id="goToLoginButton" buttonType="RAISED" layoutX="380.0" layoutY="531.0" onAction="#goToLogin" ripplerFill="#0093d9" style="-fx-background-color: #0093d9;" text="Go to Login" textFill="WHITE">
          <font>
             <Font size="18.0" />
          </font>
