--- a/client/src/main/resources/com/helper/eissoso20kabakcihosseini/dashboard.fxml
+++ b/client/src/main/resources/com/helper/eissoso20kabakcihosseini/dashboard.fxml
@@ -12,9 +12,9 @@
    <children>
       <VBox alignment="TOP_CENTER" layoutX="-106.0" layoutY="-14.0" maxWidth="75.0" prefHeight="600.0" prefWidth="75.0" spacing="60.0" style="-fx-background-color: #202020;">
          <children>
-            <JFXButton fx:id="menuButton" prefHeight="40.0" prefWidth="40.0" styleClass="menuButton" />
-            <JFXButton fx:id="profileButton" prefHeight="40.0" prefWidth="40.0" styleClass="profileButton" />
-            <JFXButton fx:id="addTaskButton" prefHeight="40.0" prefWidth="40.0" styleClass="addTaskButton" />
+            <JFXButton prefHeight="40.0" prefWidth="40.0" styleClass="menuButton" />
+            <JFXButton prefHeight="40.0" prefWidth="40.0" styleClass="profileButton" />
+            <JFXButton prefHeight="40.0" prefWidth="40.0" styleClass="addTaskButton" />
          </children>
          <padding>
             <Insets bottom="20.0" left="10.0" right="10.0" top="25.0" />
@@ -27,13 +27,13 @@
                   <Font size="35.0" />
                </font>
             </Text>
-            <JFXButton fx:id="profileButton1" layoutX="77.0" layoutY="135.0" prefHeight="40.0" prefWidth="40.0" styleClass="profileButton" />
+            <JFXButton fx:id="profileButton" layoutX="77.0" layoutY="135.0" onAction="#openProfilePage" prefHeight="40.0" prefWidth="40.0" styleClass="profileButton" />
          </children>
       </Pane>
       <Pane layoutX="366.0" layoutY="200.0" prefHeight="200.0" prefWidth="200.0" styleClass="card">
          <children>
-            <JFXButton fx:id="tasksButton" layoutX="77.0" layoutY="135.0" prefHeight="40.0" prefWidth="40.0" styleClass="showTasksButton" />
-            <Text fill="WHITE" layoutX="60.0" layoutY="64.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Profil">
+            <JFXButton fx:id="tasksButton" layoutX="77.0" layoutY="135.0" onAction="#openTasksPage" prefHeight="40.0" prefWidth="40.0" styleClass="showTasksButton" />
+            <Text fill="WHITE" layoutX="25.0" layoutY="64.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Aufgaben">
                <font>
                   <Font size="35.0" />
                </font>
