--- a/client/src/main/resources/com/helper/eissoso20kabakcihosseini/profile.fxml
+++ b/client/src/main/resources/com/helper/eissoso20kabakcihosseini/profile.fxml
@@ -2,53 +2,58 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextField?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Separator?>
+<?import com.jfoenix.controls.JFXToggleButton?>
+<?import java.lang.String?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="876.0" style="-fx-background-color: #121212;" stylesheets="@css/login.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.helper.eissoso20kabakcihosseini.controllers.ProfileController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="876.0" style="-fx-background-color: #121212;" stylesheets="@css/profile.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.helper.eissoso20kabakcihosseini.controllers.ProfileController">
    <children>
-      <Label layoutX="342.0" layoutY="14.0" text="Mein Profil" textFill="WHITE">
+      <Pane prefHeight="200.0" prefWidth="876.0" styleClass="headerContainer">
+         <children>
+            <JFXTextField fx:id="emailField" focusColor="#0093d9" labelFloat="true" layoutX="100.0" layoutY="84.0" prefHeight="33.0" prefWidth="281.0" promptText="E-MAIL" />
+            <Circle fill="DODGERBLUE" layoutX="731.0" layoutY="200.0" radius="100.0" stroke="BLACK" strokeType="INSIDE" />
+            <Text fx:id="usernameText" fill="WHITE" layoutX="653.0" layoutY="213.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Username">
+               <font>
+                  <Font size="35.0" />
+               </font>
+            </Text>
+            <JFXButton fx:id="backButton" layoutX="14.0" layoutY="14.0" onAction="#handleBackButton" styleClass="backButton" text="Zurück" />
+            <JFXToggleButton fx:id="editButton" layoutX="420.0" layoutY="71.0" styleClass="editButton" text="BEARBEITEN" toggleColor="#0093d9" toggleLineColor="#0093d9" />
+         </children>
+      </Pane>
+      <Text fill="WHITE" layoutX="100.0" layoutY="274.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Adresse">
          <font>
-            <Font size="40.0" />
+            <Font size="32.0" />
          </font>
-      </Label>
-      <JFXTextField fx:id="emailField" editable="false" focusColor="#0093d9" labelFloat="true" layoutX="52.0" layoutY="200.0" prefHeight="39.0" prefWidth="232.0" style="-jfx-unfocus-color: white;" stylesheets="@css/login.css" unFocusColor="WHITE">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </JFXTextField>
-      <Separator layoutX="8.0" layoutY="429.0" prefHeight="3.0" prefWidth="860.0" />
-      <JFXButton fx:id="updateButton" buttonType="RAISED" layoutX="389.0" layoutY="364.0" onAction="#updateUserData" ripplerFill="#0093d9" style="-fx-background-color: black;" text="Updaten" textFill="WHITE">
-         <font>
-            <Font size="22.0" />
-         </font>
+      </Text>
+      <VBox layoutX="100.0" layoutY="336.0" spacing="50.0">
+         <children>
+            <HBox spacing="30.0">
+               <children>
+                  <JFXTextField fx:id="streetField" labelFloat="true" prefHeight="40.0" prefWidth="333.0" promptText="Straße" />
+                  <JFXTextField fx:id="streetNumberField" labelFloat="true" prefHeight="40.0" prefWidth="136.0" promptText="Hausnummer" />
+               </children>
+            </HBox>
+            <HBox spacing="30.0">
+               <children>
+                  <JFXTextField fx:id="zipcodeField" labelFloat="true" prefHeight="40.0" prefWidth="136.0" promptText="PLZ" />
+                  <JFXTextField fx:id="cityField" labelFloat="true" prefHeight="40.0" prefWidth="333.0" promptText="Stadt" />
+               </children>
+            </HBox>
+         </children>
+      </VBox>
+      <JFXButton fx:id="passwordResetButton" layoutX="714.0" layoutY="524.0" styleClass="passwordResetButton" text="Password Ändern" textFill="WHITE" />
+      <JFXButton fx:id="updateButton" buttonType="RAISED" layoutX="100.0" layoutY="520.0" onAction="#updateProfile" prefHeight="33.0" prefWidth="281.0" text="AKTUALISIEREN">
+         <styleClass>
+            <String fx:value="editButton" />
+            <String fx:value="updateButton" />
+         </styleClass>
       </JFXButton>
-      <JFXButton fx:id="createTaskButton" buttonType="RAISED" layoutX="371.0" layoutY="494.0" onAction="#createTask" ripplerFill="#0093d9" style="-fx-background-color: #0093d9;" text="Hilfe suchen" textFill="WHITE">
-         <font>
-            <Font size="22.0" />
-         </font>
-      </JFXButton>
-      <JFXTextField fx:id="streetField" editable="false" focusColor="#0093d9" labelFloat="true" layoutX="496.0" layoutY="131.0" prefHeight="39.0" prefWidth="232.0" style="-jfx-unfocus-color: white;" stylesheets="@css/login.css" unFocusColor="WHITE">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </JFXTextField>
-      <JFXTextField fx:id="cityField" editable="false" focusColor="#0093d9" labelFloat="true" layoutX="496.0" layoutY="261.0" prefHeight="39.0" prefWidth="232.0" style="-jfx-unfocus-color: white;" stylesheets="@css/login.css" unFocusColor="WHITE">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </JFXTextField>
-      <JFXTextField fx:id="streetNumberField" editable="false" focusColor="#0093d9" labelFloat="true" layoutX="748.0" layoutY="131.0" prefHeight="39.0" prefWidth="87.0" style="-jfx-unfocus-color: white;" stylesheets="@css/login.css" unFocusColor="WHITE">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </JFXTextField>
-      <JFXTextField fx:id="zipcodeField" editable="false" focusColor="#0093d9" labelFloat="true" layoutX="748.0" layoutY="261.0" prefHeight="39.0" prefWidth="87.0" style="-jfx-unfocus-color: white;" stylesheets="@css/login.css" unFocusColor="WHITE">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </JFXTextField>
    </children>
 </AnchorPane>
